[project]
name = "mcp-tmap"
version = "0.1.0"
description = "MCP for TMAP API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx[http2]>=0.28.1",
    "mcp[cli]>=1.7.1",
    "python-dotenv>=1.1.0",
]

[project.scripts]
mcp_tmap = "mcp_tmap:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
